--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  libfm-qt-0.14.1.tar.xz: 7aa6f6d3642dab532c7222a3d3a4c05699498689
+  libfm-qt-0.15.0.tar.gz: 2efa51a23c14fe7b40b61386b3bd6b0643caa75b
