New download location

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  libfm-qt-0.15.0.tar.gz: 2efa51a23c14fe7b40b61386b3bd6b0643caa75b
+  libfm-qt-0.15.0.tar.xz: 67e4aa3ae2fdbcd258a395c5e17f28cbc41a93e6
